--- a/packages/frontend/src/style.scss
+++ b/packages/frontend/src/style.scss
@@ -263,11 +263,11 @@ rt {
 	background: var(--accent);
 
 	&:not(:disabled):hover {
-		background: hsl(from var(--accent) h s calc(l + 5));
+		background: hsl(from var(--accent) h s calc(l + 5%));
 	}
 
 	&:not(:disabled):active {
-		background: hsl(from var(--accent) h s calc(l - 5));
+		background: hsl(from var(--accent) h s calc(l - 5%));
 	}
 }
 
@@ -277,11 +277,11 @@ rt {
 	background: linear-gradient(90deg, var(--buttonGradateA), var(--buttonGradateB));
 
 	&:not(:disabled):hover {
-		background: linear-gradient(90deg, hsl(from var(--accent) h s calc(l + 5)), hsl(from var(--accent) h s calc(l + 5)));
+		background: linear-gradient(90deg, hsl(from var(--accent) h s calc(l + 5%)), hsl(from var(--accent) h s calc(l + 5%)));
 	}
 
 	&:not(:disabled):active {
-		background: linear-gradient(90deg, hsl(from var(--accent) h s calc(l + 5)), hsl(from var(--accent) h s calc(l + 5)));
+		background: linear-gradient(90deg, hsl(from var(--accent) h s calc(l + 5%)), hsl(from var(--accent) h s calc(l + 5%)));
 	}
 }
 
